assets/css/extended/common.css
.entry-header h2 {
  color: #bd93f9;
}

body.dark .logo a {
  font-size: 1.7rem;
}

body:not(.dark) .logo a {
  color: #bd93f9;
}


.highlight pre {
  box-shadow: 5px 5px 10px #3c2c3d;
  padding: 5px;
}

.entry-footer {
  font-style: italic;
  font-size: 10px;
  text-align: right;
}

.post-meta {
  width: 100%;
}

.post-entry {
  border-radius: 15px;
}

.post-title {
  color: #bd93f9;
}

.post-entry {
  display: block;
  /* add shadow around the block */
  box-shadow: 0px 0px 10px #3c2c3d;
}

body.dark .post-content a {
  color: rgb(0, 255, 255);
}

.nav {
  justify-content: center;
  text-align: center;
}

body.dark #menu span {
  font-weight: bold;
}

#menu span {
  text-decoration: underline;
}

#menu img {
    margin-top: 20px;
}


#menu svg {
    margin-top: 20px;
    width: 20px;
    height: 20px;
}

body.dark #menu svg path {
    fill: #bd93f9;
}

html,
body {
  font-family: "JetBrains Mono", monospace;
}

